build_output.txt
warning: field `rpc_url` is never read
  --> backend/api/src/services/sui_service.rs:13:5
   |
10 | pub struct SuiService {
   |            ---------- field in this struct
...
13 |     rpc_url: String,
   |     ^^^^^^^
   |
   = note: `SuiService` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `api` (lib) generated 1 warning
   Compiling txio v0.1.0 (/home/kingvic/Documents/drips/txio/cli)
error[E0432]: unresolved import `tokio_stream`
  --> cli/src/cli/handlers.rs:20:5
   |
20 | use tokio_stream::StreamExt;
   |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `tokio_stream`
   |
   = help: if you wanted to use a crate named `tokio_stream`, use `cargo add tokio_stream` to add it to your `Cargo.toml`

warning: unused import: `api::model::user::User`
  --> cli/src/cli/handlers.rs:13:5
   |
13 | use api::model::user::User;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Claims`
  --> cli/src/cli/handlers.rs:17:39
   |
17 | use api::utils::auth_jwt::{JwtHelper, Claims};
   |                                       ^^^^^^

warning: unused import: `anyhow`
 --> cli/src/chains/solana.rs:5:22
  |
5 | use anyhow::{Result, anyhow};
  |                      ^^^^^^

warning: unused import: `json`
 --> cli/src/chains/aptos.rs:4:18
  |
4 | use serde_json::{json, Value};
  |                  ^^^^

warning: unused import: `anyhow`
 --> cli/src/chains/aptos.rs:5:22
  |
5 | use anyhow::{Result, anyhow};
  |                      ^^^^^^

warning: unused import: `traits::ChainAdapter`
 --> cli/src/chains/mod.rs:9:9
  |
9 | pub use traits::ChainAdapter;
  |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `factory::ChainFactory`
  --> cli/src/chains/mod.rs:10:9
   |
10 | pub use factory::ChainFactory;
   |         ^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `next` found for struct `mongodb::Cursor<T>` in the current scope
   --> cli/src/cli/handlers.rs:101:49
    |
101 |                 while let Some(result) = cursor.next().await {
    |                                                 ^^^^
    |
   ::: /home/kingvic/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-util-0.3.32/src/stream/stream/mod.rs:273:8
    |
273 |     fn next(&mut self) -> Next<'_, Self>
    |        ---- the method is available for `mongodb::Cursor<mongodb::bson::Document>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `StreamExt` which provides `next` is implemented but not in scope; perhaps you want to import it
    |
  1 + use futures_util::stream::stream::StreamExt;
    |
help: there is a method `try_next` with a similar name
    |
101 |                 while let Some(result) = cursor.try_next().await {
    |                                                 ++++

error[E0282]: type annotations needed
   --> cli/src/cli/handlers.rs:102:25
    |
102 |                     let doc = result?;
    |                         ^^^
103 |                     count += 1;
104 |                     if let Ok(email) = doc.get_str("email") {
    |                                        --- type must be known at this point
    |
help: consider giving `doc` an explicit type
    |
102 |                     let doc: /* Type */ = result?;
    |                            ++++++++++++

error[E0282]: type annotations needed
   --> cli/src/cli/handlers.rs:105:44
    |
105 |                         println!("  - {}", email.green());
    |                                            ^^^^^ cannot infer type

error[E0277]: the trait bound `LoginRequest: serde::Serialize` is not satisfied
   --> cli/src/cli/handlers.rs:141:19
    |
141 |             .json(&login_request)
    |              ---- ^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `LoginRequest`
    |              |
    |              required by a bound introduced by this call
    |
    = note: for local types consider adding `#[derive(serde::Serialize)]` to your `LoginRequest` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Serialize`:
              &'a T
              &'a mut T
              &RawArray
              &RawDocument
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
            and 356 others
note: required by a bound in `RequestBuilder::json`
   --> /home/kingvic/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/reqwest-0.11.27/src/async_impl/request.rs:438:20
    |
438 |     pub fn json<T: Serialize + ?Sized>(mut self, json: &T) -> RequestBuilder {
    |                    ^^^^^^^^^ required by this bound in `RequestBuilder::json`

warning: unused variable: `name`
  --> cli/src/chains/traits.rs:17:34
   |
17 |     async fn resolve_name(&self, name: &str) -> Result<Option<String>> {
   |                                  ^^^^ help: if this is intentional, prefix it with an underscore: `_name`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `address`
  --> cli/src/chains/soroban.rs:66:33
   |
66 |     async fn get_balance(&self, address: &str) -> Result<Value> {
   |                                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_address`

Some errors have detailed explanations: E0277, E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `txio` (bin "txio") generated 9 warnings
error: could not compile `txio` (bin "txio") due to 5 previous errors; 9 warnings emitted
